# menu-server-demo

./: README.md  create_db.py  flask_app.py  pyproject.toml  requirements.txt
migrations/versions/: 5451c5df0ba3_init_migrate.py
