[tool.poetry]
name = "server-menu"
version = "0.1.0"
description = ""
authors = ["Matteo Spanio <spanio@dei.unipd.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
Flask-Cors = "^4.0.1"
Flask-Migrate = "^4.0.7"
Flask-SQLAlchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
